# Googly-Eyes

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/googly_eyes/: bot_interface.py  discord_interface.py  main.py  models.py  transport.py
src/googly_eyes/bots/: discord_interface.py  http_interface.py
src/googly_eyes/transports/: MQTT.py
tests/: test_googly_eyes.py
